--- a/src/main/webapp/css/faqlist.css
+++ b/src/main/webapp/css/faqlist.css
@@ -84,9 +84,9 @@ input[id*="answer"] + label {
   display:block;
   padding:20px;
   border:1px solid #232188;border-bottom:0;
-  color:#fff;
+  color:black;
   font-weight:900;
-  background:#3634a5;
+  background: orange;
   cursor:pointer;position:relative;
 }
 input[id*="answer"] + label em {
