--- a/src/main/webapp/css/faqlist.css
+++ b/src/main/webapp/css/faqlist.css
@@ -96,7 +96,7 @@ input[id*="answer"] + label em {
   height:30px;
   margin-top:100px;
   display:inline-block;
-  background:url("./images/arrow.png") 0 0 no-repeat;
+  background:url("../images/arrow.png") no-repeat;
 }
 input[id*="answer"] + label + div {
   max-height:0;transition: all .35s;
