--- a/src/main/webapp/css/noticelist.css
+++ b/src/main/webapp/css/noticelist.css
@@ -40,9 +40,9 @@ div.container>h1{
 
 /* 검색창  */
 .search{
-  margin-top: 30px;
-  /* float: right; */
-  margin-left: 900px;
+  position: relative;
+  right: 130px;
+  top: 17px;
 
 }
 
