--- a/src/main/webapp/css/noticelist.css
+++ b/src/main/webapp/css/noticelist.css
@@ -119,6 +119,7 @@ div.container>div.ntc_list>div>ul>li span{
 	overflow: hidden;
 }
 
-div.container>div.ntc_list>div.notice_write_button>label{
+div.container>div.ntc_list>div.notice_write_button{
+	margin-top:30px;
 	border:1px solid black;
 }
